# LuxonisSample

./: README.md  pyproject.toml
src/trackblobs/: hello_world.py
